--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -1,60 +1,63 @@
 /* Write your NewURL.js file's css here  */
-*{
-    margin : 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  height: 90vh;
+  margin-top: 150px;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
 
-  body {
-   
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    height: 80vh;
-  }
-  
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  50% {
+    background-position: 100% 50%;
   }
 
+  100% {
+    background-position: 0% 50%;
+  }
+}
 
-  div.container{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .download-button{
-    margin: 5% 3% 5% 0;
-  }
-  .narrow-links{
-    font-family: 'Oswald', sans-serif;
-    font-size: 60px;
-    margin-top: 100px;
-    margin-bottom: 50px;
-    margin-right: 3.125rem;
-  }
+div.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .link-box{
-    font-size: 20px;
-    width: 31.25rem;
-    margin-bottom: 15px;
-  }
+.download-button {
+  margin: 5% 3% 5% 0;
+}
 
-  .shorten-button{
-    width: 6.25rem;
-  }
+.narrow-links {
+  font-family: 'Lobster', cursive;
+  font-size: 60px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+  margin-right: 3.125rem;
+}
 
-.social-links{
+.link-box {
+  font-size: 20px;
+  width: 31.25rem;
+  margin-bottom: 15px;
+}
+
+.shorten-button {
+  width: 6.25rem;
+}
+
+.social-links {
   background-color: #fff;
   text-align: center;
   color: #000;
@@ -62,43 +65,38 @@
   height: 17vh;
 }
 
-.social-icons{
+.social-icons {
   margin: 20px 10px;
 }
 
-.copyright{
+.copyright {
   font-family: 'Merriweather', serif;
   margin: 40px;
   padding-right: 20px;
 }
 
-.downloads{
+.downloads {
   padding-right: 40px;
 }
 
-
-.copy-btn{
+.copy-btn {
   margin-top: 20px;
   padding-left: 270px;
 }
 
-.QR-icon{
+.QR-icon {
   font-size: 50px;
   margin-right: 500px;
   margin-left: 50px;
   margin-top: 50px;
-
-} 
+}
 
 .narrowurl {
-  font-size: 20px;
+  font-size: 15px;
   border: solid 2px black;
   padding: 7px;
   background-color: #b5b3bb;
   margin-right: 50px;
 }
 
-/* Here onwards code */
-
-
-
+/* Code from here*/
