Fixed quite a few things. Still working on the Nav Bar

--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -1,25 +1,30 @@
 /* Write your Navbar.js file's css here  */
 
-a{
-    font-family: 'Rubik', sans-serif;
+a {
+  font-family: 'Rubik', sans-serif;
 }
 
-.navbar{
-    margin-bottom: 0;
- }
-
- .navbar-brand{
-    font-family: "Ubuntu";
-    font-size: 1.5rem;
-    font-weight: bold; 
+.navbar {
+  margin-bottom: 12px;
 }
 
-.nav-link{
-    font-size: 1.2rem;
-    font-family: "Montserrat";
+.navbar-brand {
+  font-family: 'Ubuntu';
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.fa-github,
+.fa-link {
+  margin: 5px;
 }
 
-.log-in{
-height: 20px;
+.nav-link {
+  font-size: 1.2rem;
+  font-family: 'Montserrat';
+}
 
+.log-in {
+  height: 10px;
+  width: fit-content;
+  margin: auto;
 }
