--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -25,7 +25,7 @@ Table Of Contents:
 
 @keyframes gradient {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
   }
 
   50% {
@@ -33,7 +33,7 @@ Table Of Contents:
   }
 
   100% {
-    background-position: 0% 50%;
+    background-position: 0% 0%;
   }
 }
 
@@ -42,6 +42,7 @@ Table Of Contents:
 /**********************/
 .shorten-button {
   width: 6.25rem;
+  margin: 0 5px;
 }
 .copy-btn {
   padding-left: 270px;
@@ -65,7 +66,7 @@ Table Of Contents:
 .link-box {
   font-size: 20px;
   width: 31.25rem;
-  margin-bottom: 15px;
+  margin: 15px;
 }
 /**********************/
 /* Output Shortener  */
@@ -96,6 +97,9 @@ div.container {
   margin-top: 100px;
   margin-bottom: 50px;
   margin-right: 3.125rem;
+}
+.shortener {
+  margin: 25vh auto;
 }
 
 /**********************/
