--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -38,8 +38,8 @@ a {
   font-family: 'Rubik', sans-serif;
 }
 
-.signings {
-  margin: 0 0.3rem;
+.log-in {
+  margin: 0.3rem;
 }
 
 /**********************/
