Added proper loading animation for link shorting state.

--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -78,7 +78,9 @@ Table Of Contents:
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.narrowurl .btn {
+  width: 4rem;
+}
 /**********************/
 /*    Text and Body   */
 /**********************/
