--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -98,7 +98,7 @@ div.container {
 }
 
 .narrow-links {
-  font-family: 'Lobster', cursive;
+  font-family: "Lobster", cursive;
   font-size: 60px;
   margin-top: 100px;
   margin-bottom: 50px;
