--- a/client/src/css/home.css
+++ b/client/src/css/home.css
@@ -600,3 +600,18 @@ body {
   }
 
 }
+/**********************/
+/*    Toaster         */
+/**********************/
+
+.toast-container {
+  position: absolute;
+  width: 100%;
+  top:0;
+  display: flex;
+  justify-content: center;
+}
+
+.toast {
+  background-color: rgba(66, 133, 244, 0.8);
+}
