--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -12,23 +12,30 @@ Table Of Contents:
 /**********************/
 .fa-brands,
 .fa-solid {
-  visibility: visible !important;
-  margin: 0 10px;
+    visibility: visible !important;
+    margin-right: 10px;
+    height: 20px;
+}
+
+.navbar {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.navbar-nav {
+    margin: auto;
+}
+
+.container-fluid {
+    padding: 0 100px;
 }
 
 /**********************/
 /*        Text       */
 /**********************/
 .navbar-brand {
-  font-family: "Ubuntu";
-  font-size: 1.5rem;
-  font-weight: bold;
-}
-
-.nav-link {
-  font-size: 1.4rem;
-  margin: 3px 0 0 0;
-  font-family: "Montserrat";
+    font-family: "Ubuntu";
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 
 /**********************/
@@ -36,26 +43,23 @@ Table Of Contents:
 /**********************/
 
 a {
-  font-family: "Rubik", sans-serif;
+    font-family: "Rubik", sans-serif;
 }
 
-.log-in {
-  margin: 0.3rem;
+.nav-item {
+    margin: 8px 30px 0 30px;
+    color: black;
 }
 
-/**********************/
-/*    Media Queries   */
-/**********************/
+.nav-link > p {
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 0;
+    border-bottom: solid 2px transparent;
+}
 
-@media (min-width: 992px) {
-  .fa-id-badge,
-  .fa-house,
-  .fa-github {
-    visibility: hidden;
-  }
-
-  .nav-link:hover > .fa-brands,
-  .nav-link:hover > .fa-solid {
-    visibility: visible !important;
-  }
+.nav-link > p:hover {
+    color: rgba(255, 255, 255);
+    border-bottom: 2px solid #fff;
 }
